syntax = "proto3";

package turnly.business_management.v1.members;

import "common.proto";

message Member {
  string id = 1;
  string name = 2;
  string role = 3;
  string user_id = 4;
  string location_id = 5;
  repeated turnly.common.v1.Extra extras = 7;
}

message GetMemberResponse {
  Member data = 1;
  turnly.common.v1.Meta meta = 2;
}

message GetMemberByUserIdResponse {
  Member data = 1;
  turnly.common.v1.Meta meta = 2;
}
